# gsa-gtcop-202411

./: .nojekyll  _quarto.yml  index.html  index.md  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: quarto-preview.yml  quarto-publish.yml
pr-preview/pr-1/: index.html  search.json  styles.css
