[project]
name = "gsa-gtcop-202411"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter-cache>=1.0.1",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.2",
    "odc-stac>=0.3.10",
    "pyproj>=3.7.0",
    "pystac-client>=0.8.5",
    "rasterio>=1.4.2",
    "shapely>=2.0.6",
    "xarray>=2024.10.0",
]
